--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "class-validator": "^0.14.0",
     "crypto-js": "^4.1.1",
     "mongoose": "^7.3.4",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
