--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -8,3 +8,7 @@ packageExtensions:
   "@nestjs/passport@*":
     dependencies:
       passport: "*"
+
+  "@nestjs/axios@*":
+    dependencies:
+      axios: "*"
